--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,9 +6,9 @@ WORKDIR /app/default-project-adonis
 
 COPY package*.json .
 
+ENV NODE_ENV=production
 RUN npm install
 
-RUN npm install  -g @adonisjs/cli
 RUN  node ace build --production
 
 
