--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,6 +5,8 @@ services:
   container_name: default-project-adonis
   image: gabrielsoaresdev/projectdefaultadonis:latest
   restart: always
+  volumes:
+   - node_modules-default-project-adonis:/app/default-project-adonis/node_modules
   ports:
    - "3333:3333"
   networks:
