--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@adonisjs/core": "^5.9.0",
     "axios": "^1.4.0",
     "form-data": "^4.0.0",
+    "phc-bcrypt": "^1.0.8",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
