--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,4 +1,4 @@
-ARG NODE_IMAGE=node:18.16.1-alpine3.18
+ARG NODE_IMAGE=node:16.17-alpine
 
 
 FROM $NODE_IMAGE AS base
@@ -32,10 +32,6 @@ COPY --chown=node:node ./package*.json ./
 RUN npm ci --production
 COPY --chown=node:node --from=build /app/boilerplate-adonisjs/build .
 
-COPY --chown=node:node ./run-prod.sh  /tmp
-
- RUN chmod +x /tmp/run-prod.sh
-
-ENTRYPOINT ["sh", "/tmp/run-prod.sh"]
+CMD dumb-init node server.js
 
 
