--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,11 @@
 NODE_ENV=test
+PORT=3333
+HOST=0.0.0.0
+APP_KEY=TOyecaIShAbrkqdWB8AkD4be_B4TuO0o
+DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=postgres
+PG_PASSWORD=XWkIaeExxDmRwdm
+PG_DB_NAME=Boilerplate-adonisjs-test
