--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/build-push-action@v2.3.0
         with:
           context: .
-          file: Dockerfile.prod
+          file: Dockerfile.production
           # tags: colocar iamge
           no-cache: true
           push: true
