--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.5"
 services:
   boilerplate-adonisjs:
     container_name: boilerplate-adonisjs
-    build: .
+    build:
+     context: .
+     dockerfile: Dockerfile.dev
     restart: always
     ports:
     - "3333:3333"
@@ -11,6 +13,7 @@ services:
      - node-modules-boilerplate-adonisjs:/app/boilerplate-adonisjs/node_modules
     networks:
       - boilerplate-adonisjs-network
+      - postgres-network
 volumes:
   node-modules-boilerplate-adonisjs:
    name: node-modules-boilerplate-adonisjs
@@ -18,3 +21,7 @@ networks:
   boilerplate-adonisjs-network:
    name: boilerplate-adonisjs-network
    driver: bridge
+  postgres-network:
+    name: postgres-network
+    external: true
+
