--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/lucid": "^18.4.0",
     "axios": "^1.4.0",
     "form-data": "^4.0.0",
+    "luxon": "^3.3.0",
+    "pg": "^8.11.1",
     "phc-bcrypt": "^1.0.8",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
