--- a/.env.test
+++ b/.env.test
@@ -3,9 +3,14 @@ PORT=3333
 HOST=0.0.0.0
 APP_KEY=TOyecaIShAbrkqdWB8AkD4be_B4TuO0o
 DRIVE_DISK=local
+
 DB_CONNECTION=pg
 PG_HOST=localhost
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=XWkIaeExxDmRwdm
 PG_DB_NAME=Boilerplate-adonisjs-test
+PG_DB_NAME=Boilerplate-adonisjs
+
+AUTHENTICATOR_USERNAME=authenticator@gmail.com
+AUTHENTICATOR_PASSWORD=E91P9hUaCUP3LBf
