--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,14 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=TOyecaIShAbrkqdWB8AkD4be_B4TuO0o
 DRIVE_DISK=local
+
 DB_CONNECTION=pg
 PG_HOST=postgres
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=XWkIaeExxDmRwdm
 PG_DB_NAME=Boilerplate-adonisjs
+PG_DB_NAME=Boilerplate-adonisjs
+
+AUTHENTICATOR_USERNAME=authenticator@gmail.com
+AUTHENTICATOR_PASSWORD=E91P9hUaCUP3LBf
