--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
     "@types/proxy-addr": "^2.0.0",
+    "@types/sinon": "^10.0.15",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.44.0",
@@ -51,6 +52,7 @@
     "nock": "^13.3.1",
     "pino-pretty": "^10.0.1",
     "prettier": "^3.0.0",
+    "sinon": "^15.2.0",
     "typescript": "~5.1",
     "youch": "^3.2.2",
     "youch-terminal": "^2.2.2"
