--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node ace build --production",
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test:coverage": "nyc node ace test"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^4.2.1",
     "nock": "^13.3.1",
+    "nyc": "^15.1.0",
     "pino-pretty": "^10.0.1",
     "prettier": "^2.8.3",
     "sinon": "^15.2.0",
