--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
-    "test:coverage": "nyc node ace test"
+    "test:coverage": "nyc node ace test",
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,8 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.5",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@faker-js/faker": "^8.0.2",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
@@ -46,10 +50,12 @@
     "@types/sinon": "^10.0.15",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "nock": "^13.3.1",
     "nyc": "^15.1.0",
     "pino-pretty": "^10.0.1",
@@ -64,6 +70,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.4.0",
     "axios": "^1.4.0",
+    "commitizen": "^4.3.0",
     "form-data": "^4.0.0",
     "luxon": "^3.3.0",
     "pg": "^8.11.1",
@@ -71,5 +78,10 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
