feat(external apis): via cep and ntfy services

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -22,7 +22,8 @@
     "@adonisjs/lucid",
     "@adonisjs/auth",
     "./providers/RepositoriesProvider",
-    "./providers/UtilsProvider"
+    "./providers/UtilsProvider",
+    "./providers/ExternalApisProvider"
   ],
   "metaFiles": [
     {
