--- a/.env.test
+++ b/.env.test
@@ -13,3 +13,6 @@ PG_DB_NAME=Boilerplate-adonisjs-test
 
 AUTHENTICATOR_USERNAME=authenticator@gmail.com
 AUTHENTICATOR_PASSWORD=E91P9hUaCUP3LBf
+
+VIACEP_API=https://viacep.com.br/
+NTFY_API=https://ntfy.sh/
