--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@adonisjs/lucid": "^18.4.0",
     "axios": "^1.4.0",
     "commitizen": "^4.3.0",
+    "date-fns": "^2.30.0",
     "form-data": "^4.0.0",
     "luxon": "^3.3.0",
     "pg": "^8.11.1",
