--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install dependencies
+        run: npm i
+      - name: Install Production Dependencies
         run: npm ci
       - name: Checking types
         run: node ace type-check
